[package]
name = "rustmigemo"
version = "0.1.2-dev"
authors = ["oguna <5452619+oguna@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
getopts = "0.2.23"

[dev-dependencies]
rand = "0.9.2"
