[package]
name = "rustmigemo"
version = "0.1.6"
authors = ["oguna <5452619+oguna@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rustmigemo-cli"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:pico-args"]
wasm = ["dep:wasm-bindgen"]
windows-dll = []

[dependencies]
byteorder = "1.5.0"
pico-args = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }

[dev-dependencies]
rand = "0.9.2"